# toxicity-detector

./: .gitignore  Dockerfile  README.md  compose.dev.yaml  grafana-dashboard.json  prometheus.yml  pyproject.toml
.github/workflows/: build-and-push.yml  docker-push.yml  dockerhub-description.yml
app/: config.py  logger.py  metrics.py  model.py  server.py  utils.py
