[project]
name = "toxicity-detector"
version = "0.1.0"
description = "Simple Multi-Language HTTP Server Text Toxicity Detector"
authors = [{ name = "MrPandir", email = "MrPandir@users.noreply.github.com" }]
dependencies = [
    "transformers>=4.48.0",
    "starlette>=0.45.2",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp311-cp311-linux_x86_64.whl; platform_machine == 'x86_64'",
    "torch==2.3.1; platform_machine == 'arm64' or platform_machine == 'aarch64'",
]
requires-python = ">= 3.9"

[tool.rye.scripts]
server = "uvicorn app.server:app"
dev-server = "uvicorn app.server:app --reload"

[tool.rye]
managed = true
virtual = true
universal = true
dev-dependencies = []
excluded-dependencies = []

[[tool.rye.sources]]
name = "pytorch-stable"
url = "https://download.pytorch.org/whl/torch_stable.html"
