[project]
name = "toxicity-detector"
version = "0.1.0"
description = "Simple Multi-Language HTTP Server Text Toxicity Detector"
authors = [{ name = "MrPandir", email = "MrPandir@users.noreply.github.com" }]
dependencies = [
    "transformers>=4.48.0",
    "starlette>=0.45.2",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
    "torch==2.3.1",
    "prometheus_client>=0.21.1",
]
requires-python = ">= 3.9"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
